--- a/static/css/stay_sharp/Login.css
+++ b/static/css/stay_sharp/Login.css
@@ -1,6 +1,5 @@
  .u-section-1 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("/static/images/stay_sharp/317024594-0.jpeg");
-  background-position: 50% 50%;
 }
 
 .u-section-1 .u-sheet-1 {
@@ -246,6 +245,10 @@
 }
 
 @media (max-width: 1399px) {
+   .u-section-1 {
+    background-position: 50% 50%;
+  }
+
   .u-section-1 .u-sheet-1 {
     min-height: 762px;
   }
@@ -355,10 +358,6 @@
 }
 
 @media (max-width: 1199px) {
-   .u-section-1 {
-    background-position: 50% 50%;
-  }
-
   .u-section-1 .u-sheet-1 {
     min-height: 811px;
   }
@@ -684,7 +683,6 @@
   transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, background-size, background-position;
 } .u-section-2 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("/static/images/stay_sharp/317024594-0.jpeg");
-  background-position: 50% 50%;
 }
 
 .u-section-2 .u-sheet-1 {
@@ -767,9 +765,17 @@
 
 .u-section-2 .u-btn-2 {
   border-style: none none solid;
-  font-size: 1rem;
   font-weight: normal;
-  margin: 33px auto 0;
+  font-size: 1.125rem;
+  margin: 22px auto 0;
+  padding: 0;
+}
+
+.u-section-2 .u-btn-3 {
+  border-style: none none solid;
+  font-weight: normal;
+  font-size: 1.125rem;
+  margin: 30px auto 0;
   padding: 0;
 }
 
@@ -878,12 +884,16 @@
 }
 
 @media (max-width: 1399px) {
+   .u-section-2 {
+    background-position: 50% 50%;
+  }
+
   .u-section-2 .u-sheet-1 {
     min-height: 762px;
   }
 
   .u-section-2 .u-layout-cell-1 {
-    min-height: 715px;
+    min-height: 677px;
   }
 
   .u-section-2 .u-layout-cell-2 {
@@ -953,10 +963,6 @@
 }
 
 @media (max-width: 1199px) {
-   .u-section-2 {
-    background-position: 50% 50%;
-  }
-
   .u-section-2 .u-sheet-1 {
     min-height: 811px;
   }
@@ -966,7 +972,7 @@
   }
 
   .u-section-2 .u-layout-cell-1 {
-    min-height: 738px;
+    min-height: 558px;
   }
 
   .u-section-2 .u-container-layout-1 {
@@ -1019,7 +1025,7 @@
   }
 
   .u-section-2 .u-layout-cell-1 {
-    min-height: 672px;
+    min-height: 100px;
   }
 
   .u-section-2 .u-container-layout-1 {
@@ -1081,10 +1087,6 @@
     margin-top: 20px;
   }
 
-  .u-section-2 .u-layout-cell-1 {
-    min-height: 549px;
-  }
-
   .u-section-2 .u-container-layout-1 {
     padding-bottom: 16px;
   }
@@ -1097,10 +1099,6 @@
   .u-section-2 .u-form-1 {
     width: 280px;
     margin-top: 25px;
-  }
-
-  .u-section-2 .u-btn-2 {
-    margin-top: 30px;
   }
 
   .u-section-2 .u-layout-cell-2 {
@@ -1202,10 +1200,6 @@
 @media (max-width: 575px) {
   .u-section-2 .u-sheet-1 {
     min-height: 1223px;
-  }
-
-  .u-section-2 .u-layout-cell-1 {
-    min-height: 529px;
   }
 
   .u-section-2 .u-container-layout-1 {
@@ -1312,7 +1306,6 @@
   }
 } .u-section-3 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("/static/images/stay_sharp/317024594-0.jpeg");
-  background-position: 50% 50%;
 }
 
 .u-section-3 .u-sheet-1 {
@@ -1417,6 +1410,10 @@
 }
 
 @media (max-width: 1399px) {
+   .u-section-3 {
+    background-position: 50% 50%;
+  }
+
   .u-section-3 .u-sheet-1 {
     min-height: 762px;
   }
@@ -1456,10 +1453,6 @@
 }
 
 @media (max-width: 1199px) {
-   .u-section-3 {
-    background-position: 50% 50%;
-  }
-
   .u-section-3 .u-sheet-1 {
     min-height: 811px;
   }
@@ -1630,7 +1623,6 @@
   }
 } .u-section-4 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("/static/images/stay_sharp/317024594-0.jpeg");
-  background-position: 50% 50%;
 }
 
 .u-section-4 .u-sheet-1 {
@@ -1838,6 +1830,10 @@
 }
 
 @media (max-width: 1399px) {
+   .u-section-4 {
+    background-position: 50% 50%;
+  }
+
   .u-section-4 .u-sheet-1 {
     min-height: 762px;
   }
@@ -1860,10 +1856,6 @@
 }
 
 @media (max-width: 1199px) {
-   .u-section-4 {
-    background-position: 50% 50%;
-  }
-
   .u-section-4 .u-sheet-1 {
     min-height: 811px;
   }
