--- a/static/css/stay_sharp/Main.css
+++ b/static/css/stay_sharp/Main.css
@@ -1,10 +1,9 @@
  .u-section-1 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.55), rgba(0,0,0,0.55)), url("/static/images/stay_sharp/tormek_t-4_bushcraft.jpg");
-  background-position: 50% 50%;
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 100vh;
+  min-height: 831px;
 }
 
 .u-section-1 .u-text-1 {
@@ -22,12 +21,13 @@
 }
 
 .u-section-1 .u-text-3 {
-  margin: 33px 129px 0 193px;
+  width: 898px;
+  margin: 46px auto 0;
 }
 
 .u-section-1 .u-text-4 {
   width: 401px;
-  margin: 42px auto 0;
+  margin: 74px auto 0;
 }
 
 .u-section-1 .u-text-5 {
@@ -42,19 +42,31 @@
   font-size: 0.875rem;
   letter-spacing: 1px;
   background-image: none;
-  margin: 46px auto 60px;
+  margin: 46px auto 0;
+}
+
+.u-section-1 .u-text-6 {
+  font-size: 1.875rem;
+  width: 394px;
+  margin: 25px auto 60px;
 }
 
 @media (max-width: 1399px) {
+   .u-section-1 {
+    background-position: 50% 50%;
+  }
+
+  .u-section-1 .u-sheet-1 {
+    min-height: 100vh;
+  }
+
   .u-section-1 .u-text-3 {
     width: 858px;
-    margin-top: 38px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-top: 37px;
   }
 
   .u-section-1 .u-text-4 {
-    margin-top: 53px;
+    margin-top: 54px;
   }
 
   .u-section-1 .u-btn-1 {
@@ -108,5 +120,10 @@
 
   .u-section-1 .u-text-5 {
     width: 375px;
+  }
+
+  .u-section-1 .u-text-6 {
+    width: 375px;
+    font-size: 1.5rem;
   }
 }
