--- a/templates/registration/Edit_account.html
+++ b/templates/registration/Edit_account.html
@@ -19,16 +19,16 @@
 {% block section1 %}
     <section class="skrollable u-clearfix u-image u-lightbox u-parallax u-shading u-section-2" id="carousel_f9f2"
              data-image-width="1500" data-image-height="1000">
-    <div class="u-clearfix u-sheet u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+        <div class="u-clearfix u-sheet u-valign-middle-sm u-valign-middle-xs u-sheet-1">
             <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
                 <div class="u-layout">
                     <div class="u-layout-row">
                         <div class="u-container-style u-layout-cell u-size-20 u-layout-cell-1">
-                        <div class="u-container-layout u-valign-top-lg u-valign-top-md u-container-layout-1">
-                            <h3 class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-default-xxl u-text-palette-3-light-2 u-text-1">
-                                Edit profile</h3>
+                            <div class="u-container-layout u-valign-top-lg u-valign-top-md u-container-layout-1">
+                                <h3 class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-default-xxl u-text-palette-3-light-2 u-text-1">
+                                    Edit profile</h3>
                                 <div class="u-form u-form-1">
-                                    <form action="" method="POST"
+                                    <form action="" method="POST" id="edit"
                                           class="u-clearfix u-form-custom-backend u-form-spacing-0 u-form-vertical u-inner-form"
                                           source="custom" name="sighup" style="padding: 10px;" redirect="true">
                                         {% csrf_token %}
@@ -68,15 +68,21 @@
                                         </div>
                                     </form>
                                 </div>
-                                        <a href="{% url 'password_reset' %}"
-                                           class="u-active-none u-border-2 u-border-active-palette-2-base u-border-hover-palette-4-light-2 u-border-palette-3-light-2 u-btn u-button-style u-custom-font u-font-merriweather u-hover-none u-none u-text-active-palette-2-base u-text-hover-palette-4-light-2 u-text-palette-3-light-2 u-btn-2"
-                                           data-animation-name="" data-animation-duration="0" data-animation-delay="0"
-                                           data-animation-direction="">Reset password</a>
+                                <a href="{% url 'password_reset' %}"
+                                      class="u-active-none u-border-2 u-border-active-palette-2-base u-border-hover-palette-4-light-2 u-border-palette-3-light-2 u-btn u-button-style u-hover-none u-none u-text-active-palette-2-base u-text-hover-palette-4-light-2 u-text-palette-3-light-2 u-btn-2"
+                                      data-animation-name="" data-animation-duration="0" data-animation-delay="0"
+                                      data-animation-direction="">Reset password</a>
+                                <button form="edit" type="submit" formaction="{% url 'account_delete' %}"
+                                        class="u-active-none u-border-2 u-border-active-palette-2-base u-border-hover-palette-4-base u-border-palette-3-light-2 u-btn u-button-style u-hover-none u-none u-text-active-palette-2-base u-text-hover-palette-2-base u-text-palette-3-light-2 u-btn-3"
+                                        data-animation-name="" data-animation-duration="0" data-animation-delay="0"
+                                        data-animation-direction="">Delete
+                                </button>
                             </div>
                         </div>
                         <div class="u-container-style u-layout-cell u-size-20 u-layout-cell-2">
-                        <div class="u-container-layout u-container-layout-2">
-                            <h5 class="u-align-center u-text u-text-palette-3-light-2 u-text-2" data-animation-name=""
+                            <div class="u-container-layout u-container-layout-2">
+                                <h5 class="u-align-center u-text u-text-palette-3-light-2 u-text-2"
+                                    data-animation-name=""
                                     data-animation-duration="0" data-animation-delay="0"
                                     data-animation-direction="">
                                     <span style="font-size: 1.25rem;">Messages</span>
@@ -142,15 +148,15 @@
                             </div>
                         </div>
                         <div class="u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xl u-align-left-xs u-container-style u-layout-cell u-size-20 u-layout-cell-3">
-                        <div class="u-container-layout u-valign-middle-xl u-container-layout-3">
-                            <div class="u-container-style u-group u-group-1">
-                                <div class="u-container-layout u-container-layout-4">
-                                    <h5 class="u-align-center u-text u-text-palette-3-light-2 u-text-5">Notices</h5>
-                                    <h5 class="u-align-center u-text u-text-palette-3-light-2 u-text-6">
+                            <div class="u-container-layout u-valign-middle-xl u-container-layout-3">
+                                <div class="u-container-style u-group u-group-1">
+                                    <div class="u-container-layout u-container-layout-4">
+                                        <h5 class="u-align-center u-text u-text-palette-3-light-2 u-text-5">Notices</h5>
+                                        <h5 class="u-align-center u-text u-text-palette-3-light-2 u-text-6">
                                             --------------</h5>
-                                    <h5 class="u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xl u-align-left-xs u-text u-text-palette-3-light-2 u-text-7">
+                                        <h5 class="u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xl u-align-left-xs u-text u-text-palette-3-light-2 u-text-7">
                                             Userna​me</h5>
-                                    <ul class="u-align-justify u-text u-text-palette-3-light-2 u-text-8"
+                                        <ul class="u-align-justify u-text u-text-palette-3-light-2 u-text-8"
                                             data-animation-name="" data-animation-duration="0" data-animation-delay="0"
                                             data-animation-direction="">
                                             <li> Required. Letters, digits and @/./+/-/_ only.</li>
@@ -167,26 +173,26 @@
                                             data-animation-direction="">
                                             <li> Not required</li>
                                         </ul>
-                                    <p class="u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xl u-align-left-xs u-text u-text-12"
+                                        <p class="u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xl u-align-left-xs u-text u-text-12"
                                            data-animation-name="" data-animation-duration="0" data-animation-delay="0"
                                            data-animation-direction=""> &nbsp; &nbsp;</p>
-                                    <h5 class="u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xl u-align-left-xs u-text u-text-palette-3-light-2 u-text-13"
+                                        <h5 class="u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xl u-align-left-xs u-text u-text-palette-3-light-2 u-text-13"
                                             data-animation-name="" data-animation-duration="0" data-animation-delay="0"
                                             data-animation-direction=""> Email</h5>
-                                    <ul class="u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xl u-align-left-xs u-text u-text-palette-3-light-2 u-text-14"
+                                        <ul class="u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xl u-align-left-xs u-text u-text-palette-3-light-2 u-text-14"
                                             data-animation-name="" data-animation-duration="0" data-animation-delay="0"
                                             data-animation-direction="">
                                             <li> Required confirmation via link on email</li>
                                         </ul>
-                                    <p class="u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xl u-align-left-xs u-text u-text-15"
+                                        <p class="u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xl u-align-left-xs u-text u-text-15"
                                            data-animation-name="" data-animation-duration="0" data-animation-delay="0"
                                            data-animation-direction=""> &nbsp; &nbsp;</p>
-                                    <h5 class="u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xl u-align-left-xs u-text u-text-palette-3-light-2 u-text-16"
+                                        <h5 class="u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xl u-align-left-xs u-text u-text-palette-3-light-2 u-text-16"
                                             data-animation-name="" data-animation-duration="0" data-animation-delay="0"
                                             data-animation-direction="">
                                             <span style="font-size: 1.125rem;"> Password</span>
                                         </h5>
-                                    <ul class="u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xl u-align-left-xs u-text u-text-palette-3-light-2 u-text-17"
+                                        <ul class="u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xl u-align-left-xs u-text u-text-palette-3-light-2 u-text-17"
                                             data-animation-name="" data-animation-duration="0" data-animation-delay="0"
                                             data-animation-direction="">
                                             <li> can’t be too similar to other personal information.</li>
