--- a/templates/registration/verify_email.html
+++ b/templates/registration/verify_email.html
@@ -3,5 +3,5 @@ Dear user {{ user.username }}!
 You have registered on the site "Stay Sharp".
 You need to activate registration to verify your email.
 To do this, please follow the link
-http://{{ domain }}{% url 'verify_email' uidb64=uid token=token %}
+http://{{ domain }}{% url 'verify_email' uidb64=uid token=token email=email%} # add
 {% endautoescape %}
