--- a/templates/Base.html
+++ b/templates/Base.html
@@ -148,7 +148,7 @@
                                                           data-lang-en="{&quot;content&quot;:&quot;Login&quot;,&quot;href&quot;:&quot;Login.html&quot;}">Login</a>
                                 </li>
                                 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="{% url 'sighup' %}"
-                                                          data-lang-en="{&quot;content&quot;:&quot;Login&quot;,&quot;href&quot;:&quot;Login.html&quot;}">Login</a>
+                                                          data-lang-en="{&quot;content&quot;:&quot;Login&quot;,&quot;href&quot;:&quot;Login.html&quot;}">Sighup</a>
                                 </li>
                             {% endif %}
                         </ul>
