deploy activate with changes email 27.09.22

--- a/templates/Base.html
+++ b/templates/Base.html
@@ -9,6 +9,7 @@
     <meta name="description" content="">
     <title> {% block title %} {% endblock %} </title>
     <link rel="stylesheet" href="{% static 'css/stay_sharp/nicepage.css' %}" media="screen">
+    <link rel="stylesheet" href="{% static 'css/stay_sharp/Main.css' %}" media="screen">
 
     {% block static_main %}{% endblock %}
 
