--- a/templates/Choose-the-angle.html
+++ b/templates/Choose-the-angle.html
@@ -23,18 +23,31 @@
         <div class="u-clearfix u-sheet u-sheet-1">
             <div class="u-clearfix u-expanded-width u-gutter-0 u-layout-wrap u-layout-wrap-1">
                 <div class="u-layout">
-
                     <div class="u-layout-row">
                         <div class="u-size-40">
                             <div class="u-layout-row">
-
                                 <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-1">
-                                <div class="u-container-layout u-valign-top-xxl u-container-layout-1">
-                                        <h4 class="u-align-center u-text u-text-palette-3-light-2 u-text-1"> Use next
-                                            step&nbsp;<br>for
-                                            choo​​si​ng the ang​le
+                                    <div class="u-container-layout u-container-layout-1">
+                                        <h3 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-palette-3-light-2 u-text-1">
+                                            Suggestion</h3>
+                                        <h3 class="u-align-center u-custom-font u-heading-font u-text u-text-palette-3-light-2 u-text-2"
+                                            data-animation-name="counter" data-animation-event="scroll"
+                                            data-animation-duration="3000">{{ knife.angle|default:angle|floatformat:1 }}<br>
+                                        </h3>
+                                        <h4 class="u-custom-font u-font-playfair-display u-text u-text-palette-4-light-1 u-text-3">
+                                            An<span style="font-weight: 700;"></span>gle&nbsp; (do<span
+                                                style="font-weight: 400;"></span>uble)
                                         </h4>
-                                        <h5 class="u-align-center u-text u-text-palette-4-light-1 u-text-2">Step 1</h5>
+                                        <h4 class="u-text u-text-palette-4-light-1 u-text-4"> Honing
+                                            additional&nbsp;<br>for
+                                            debarring&nbsp;
+                                        </h4>
+                                        <h3 class="u-align-center u-custom-font u-heading-font u-text u-text-palette-3-light-2 u-text-5"
+                                            data-animation-name="counter" data-animation-event="scroll"
+                                            data-animation-duration="3000">
+                                            {{ knife.honing_add|default:honing_add|floatformat:1 }}
+                                        </h3>
+                                        <h5 class="u-align-center u-text u-text-palette-4-light-1 u-text-6">Step 1</h5>
                                         <div class="u-form u-form-1">
                                             <form action="" method="POST"
                                                   class="u-clearfix u-form-custom-backend u-form-spacing-0 u-form-vertical u-inner-form"
@@ -112,15 +125,17 @@
                                             </form>
                                         </div>
                                         {% if message_step1 %}
-                                            <h4 class="u-align-center u-custom-font u-font-lobster u-text u-text-palette-4-light-3 u-text-3"
+                                            <h4 class="u-align-center u-custom-font u-font-lobster u-text u-text-palette-4-light-3 u-text-7"
                                                 data-animation-name="bounceIn" data-animation-duration="1000"
                                                 data-animation-delay="0"
                                                 data-animation-direction="">{{ message_step1 }}</h4>
-                                        {% else %}
-                                            <br>
-                                            <br>
                                         {% endif %}
-                                        <h5 class="u-align-center u-text u-text-palette-4-light-1 u-text-4">Step 2<br>
+
+                                    </div>
+                                </div>
+                                <div class="u-container-style u-layout-cell u-shape-rectangle u-size-30 u-layout-cell-2">
+                                    <div class="u-container-layout u-container-layout-2">
+                                        <h5 class="u-align-center u-text u-text-palette-4-light-1 u-text-8">Step 2<br>
                                         </h5>
                                         <div class="u-form u-form-2">
                                             <form action="" method="POST"
@@ -156,18 +171,16 @@
                                             </form>
                                         </div>
                                         {% if message_step2 %}
-                                            <h4 class="u-align-center u-custom-font u-font-lobster u-text u-text-palette-4-light-3 u-text-5"
+                                            <h4 class="u-align-center u-custom-font u-font-lobster u-text u-text-palette-4-light-3 u-text-9"
                                                 data-animation-name="bounceIn" data-animation-duration="1000"
                                                 data-animation-delay="0"
                                                 data-animation-direction="">{{ message_step2 }}</h4>
                                         {% else %}
                                             <br>
+                                            <br>
                                         {% endif %}
-                                    </div>
-                                </div>
-                                <div class="u-container-style u-layout-cell u-shape-rectangle u-size-30 u-layout-cell-2">
-                                    <div class="u-container-layout u-container-layout-2">
-                                        <h5 class="u-align-center u-text u-text-palette-4-light-1 u-text-6">Step 3</h5>
+
+                                        <h5 class="u-align-center u-text u-text-palette-4-light-1 u-text-10">Step 3</h5>
                                         <div class="u-form u-form-3">
                                             <form action="" method="POST"
                                                   class="u-clearfix u-form-custom-backend u-form-spacing-0 u-form-vertical u-inner-form"
@@ -207,33 +220,11 @@
                                             </form>
                                         </div>
                                         {% if message_step3 %}
-                                            <h4 class="u-align-center u-custom-font u-font-lobster u-text u-text-palette-4-light-3 u-text-7"
+                                            <h4 class="u-align-center u-custom-font u-font-lobster u-text u-text-palette-4-light-3 u-text-11"
                                                 data-animation-name="bounceIn" data-animation-duration="1000"
                                                 data-animation-delay="0"
                                                 data-animation-direction="">{{ message_step3 }}</h4>
-                                        {% else %}
-                                            <br>
-                                            <br>
                                         {% endif %}
-                                        <h3 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-palette-3-light-2 u-text-8">
-                                            Suggestion</h3>
-                                        <h3 class="u-align-center u-custom-font u-heading-font u-text u-text-palette-3-light-2 u-text-9"
-                                            data-animation-name="counter" data-animation-event="scroll"
-                                            data-animation-duration="3000">{{ knife.angle|default:angle|floatformat:1 }}<br>
-                                        </h3>
-                                        <h4 class="u-custom-font u-font-playfair-display u-text u-text-palette-4-light-1 u-text-10">
-                                            An<span style="font-weight: 700;"></span>gle&nbsp; (do<span
-                                                style="font-weight: 400;"></span>uble)
-                                        </h4>
-                                        <h4 class="u-text u-text-palette-4-light-1 u-text-11"> Honing
-                                            additional&nbsp;<br>for
-                                            debarring&nbsp;
-                                        </h4>
-                                        <h3 class="u-align-center u-custom-font u-heading-font u-text u-text-palette-3-light-2 u-text-12"
-                                            data-animation-name="counter" data-animation-event="scroll"
-                                            data-animation-duration="3000">
-                                            {{ knife.honing_add|default:honing_add|floatformat:1 }}
-                                        </h3>
                                     </div>
                                 </div>
                             </div>
@@ -241,27 +232,26 @@
                         <div class="u-size-20">
                             <div class="u-layout-col">
                                 <div class="u-container-style u-layout-cell u-shape-rectangle u-size-60 u-layout-cell-3">
-                                <div class="u-container-layout u-valign-bottom-xs u-container-layout-3">
-                                    <div class="u-container-style u-expanded-width-lg u-expanded-width-md u-group u-group-1"
-                                             data-animation-name="" data-animation-duration="0"
-                                             data-animation-direction="">
+                                    <div class="u-container-layout u-container-layout-3">
+                                        <div class="u-container-style u-group u-group-1" data-animation-name=""
+                                             data-animation-duration="0" data-animation-direction="">
                                             <div class="u-container-layout u-container-layout-4">
-                                                <h4 class="u-align-center u-text u-text-palette-3-light-2 u-text-13">
+                                                <h4 class="u-align-center u-text u-text-palette-3-light-2 u-text-12">
                                                     Comments</h4>
-                                                <h5 class="u-align-justify u-custom-font u-font-raleway u-text u-text-palette-3-light-2 u-text-14">
+                                                <h5 class="u-align-justify u-custom-font u-font-raleway u-text u-text-palette-3-light-2 u-text-13">
                                                     &nbsp; We use data about knives with different brands and steel
                                                     blades.
                                                     Our base with over forty knives allows proposing appropriate angles
                                                     for
                                                     grinding. </h5>
-                                                <h5 class="u-align-left u-custom-font u-font-raleway u-text u-text-palette-3-light-2 u-text-15">
+                                                <h5 class="u-align-left u-custom-font u-font-raleway u-text u-text-palette-3-light-2 u-text-14">
                                                     &nbsp; &nbsp; &nbsp; ​We can use any of 3 steps:<br>
                                                     <br>Step 1 - brand or brand and series or steel<br>
                                                     <br>Step2 - carbon of steel or carbon and&nbsp;additives (CrMoV)
                                                     <br>
                                                     <br>Step3 - category from low quality to premium_quality
                                                 </h5>
-                                                <h5 class="u-align-justify u-custom-font u-font-raleway u-text u-text-palette-3-light-2 u-text-16">
+                                                <h5 class="u-align-justify u-custom-font u-font-raleway u-text u-text-palette-3-light-2 u-text-15">
                                                     &nbsp; &nbsp;In the end, we will suggest an angle for grinding and
                                                     honing.</h5>
                                             </div>
