--- a/templates/Account-table_edit.html
+++ b/templates/Account-table_edit.html
@@ -56,7 +56,7 @@
                             №
                         </th>
                         <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-2">
-                            Brend
+                            Brand
                         </th>
                         <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-3">
                             Series
@@ -123,7 +123,7 @@
                                                    type="{{ field.widget_type }}"
                                                    id="{{ field.id_for_label }}">
                                         </td>
-                                    {% elif field.label == 'Brend' or field.label == 'Steel' or field.label == 'Series' %}
+                                    {% elif field.label == 'Brand' or field.label == 'Steel' or field.label == 'Series' %}
                                         <td class="u-border-1 u-border-grey-30 u-table-cell">
                                             <label for="{{ field.id_for_label }}"></label>
                                             <input style="width: 70px !important; height: 26px !important;"
