--- a/templates/Calculation.html
+++ b/templates/Calculation.html
@@ -150,7 +150,7 @@
                                         <input type="number" step="0.1" min="0" max="130" placeholder="r_wheel"
                                                id="text-cfc6" name="RW"
                                                class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white u-input-9"
-                                               required="required" value="{{ RWH }}">
+                                               required="required" value="{{ RWH|default:107.2 }}">
                                     </div>
                                     <div class="u-form-group u-label-left u-form-group-11">
                                         <label for="text-e515"
