--- a/static/css/stay_sharp/Calculation.css
+++ b/static/css/stay_sharp/Calculation.css
@@ -127,26 +127,27 @@
 
 .u-section-1 .u-group-1 {
   background-image: none;
-  width: 100px;
+  width: 110px;
   height: auto;
-  min-height: 47px;
-  margin: 12px 131px 0 auto;
+  min-height: 46px;
+  margin: 13px 127px 0 auto;
 }
 
 .u-section-1 .u-container-layout-2 {
-  padding: 0 20px;
+  padding: 0;
 }
 
 .u-section-1 .u-text-3 {
   font-size: 1.5rem;
   font-weight: 400;
-  margin: 0;
+  width: 70px;
+  margin: 0 auto;
 }
 
 .u-section-1 .u-text-4 {
   font-size: 1.5rem;
   font-weight: 400;
-  margin: -39px 246px 0 136px;
+  margin: -37px 246px 0 136px;
 }
 
 .u-section-1 .u-layout-cell-2 {
@@ -294,20 +295,20 @@
 }
 
 .u-section-1 .u-group-2 {
-  width: 106px;
-  min-height: 47px;
+  width: 110px;
+  min-height: 46px;
   height: auto;
-  margin: 10px 140px 0 281px;
+  margin: 9px 143px 0 auto;
 }
 
 .u-section-1 .u-container-layout-4 {
-  padding: 0 20px;
+  padding: 0;
 }
 
 .u-section-1 .u-text-7 {
   font-size: 1.5rem;
   font-weight: 400;
-  margin: 10px 0 0;
+  margin: 0 20px;
 }
 
 .u-section-1 .u-text-8 {
@@ -357,11 +358,6 @@
     height: auto;
   }
 
-  .u-section-1 .u-container-layout-2 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
   .u-section-1 .u-text-3 {
     width: auto;
     margin-left: 7px;
@@ -370,7 +366,6 @@
 
   .u-section-1 .u-text-4 {
     width: auto;
-    margin-top: -37px;
     margin-right: 262px;
     margin-left: 155px;
   }
@@ -396,8 +391,6 @@
   }
 
   .u-section-1 .u-group-2 {
-    margin-right: 139px;
-    margin-left: auto;
     height: auto;
   }
 
@@ -450,17 +443,18 @@
   }
 
   .u-section-1 .u-group-1 {
-    margin-right: 115px;
+    margin-top: 15px;
+    margin-right: 103px;
   }
 
-  .u-section-1 .u-container-layout-2 {
-    padding-left: 20px;
-    padding-right: 20px;
+  .u-section-1 .u-text-3 {
+    margin-left: 10px;
+    margin-right: 10px;
   }
 
   .u-section-1 .u-text-4 {
     margin-right: auto;
-    margin-left: 128px;
+    margin-left: 129px;
   }
 
   .u-section-1 .u-layout-cell-2 {
@@ -487,12 +481,13 @@
   }
 
   .u-section-1 .u-group-2 {
-    margin-right: 113px;
+    margin-top: 19px;
+    margin-right: 121px;
   }
 
   .u-section-1 .u-text-8 {
     margin-right: auto;
-    margin-left: 128px;
+    margin-left: 113px;
   }
 }
 
@@ -516,17 +511,12 @@
 
   .u-section-1 .u-group-1 {
     margin-top: 13px;
-    margin-right: 84px;
-  }
-
-  .u-section-1 .u-container-layout-2 {
-    padding-left: 13px;
-    padding-right: 13px;
+    margin-right: 70px;
   }
 
   .u-section-1 .u-text-3 {
-    margin-left: 0;
-    margin-right: 0;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-1 .u-text-4 {
@@ -542,23 +532,18 @@
   }
 
   .u-section-1 .u-group-2 {
-    margin-top: 13px;
+    margin-top: 16px;
     margin-right: 70px;
-  }
-
-  .u-section-1 .u-container-layout-4 {
-    padding-left: 13px;
-    padding-right: 13px;
   }
 
   .u-section-1 .u-text-7 {
     width: auto;
-    margin-top: 0;
     margin-left: 7px;
     margin-right: 7px;
   }
 
   .u-section-1 .u-text-8 {
+    margin-top: -34px;
     margin-left: 79px;
   }
 }
@@ -577,8 +562,13 @@
     min-height: 348px;
   }
 
+  .u-section-1 .u-container-layout-1 {
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+
   .u-section-1 .u-text-1 {
-    margin-top: 26px;
+    margin-top: 41px;
     margin-right: 135px;
   }
 
@@ -598,12 +588,7 @@
 
   .u-section-1 .u-group-1 {
     margin-top: 24px;
-    margin-right: 118px;
-  }
-
-  .u-section-1 .u-container-layout-2 {
-    padding-left: 10px;
-    padding-right: 10px;
+    margin-right: 93px;
   }
 
   .u-section-1 .u-text-4 {
@@ -615,8 +600,13 @@
     min-height: 430px;
   }
 
+  .u-section-1 .u-container-layout-3 {
+    padding-top: 12px;
+    padding-bottom: 12px;
+  }
+
   .u-section-1 .u-text-5 {
-    margin-top: 48px;
+    margin-top: 56px;
     margin-right: 135px;
   }
 
@@ -633,12 +623,13 @@
     margin-left: 432px;
   }
 
-  .u-section-1 .u-container-layout-4 {
-    padding-left: 10px;
-    padding-right: 10px;
+  .u-section-1 .u-group-2 {
+    margin-top: 20px;
+    margin-right: 93px;
   }
 
   .u-section-1 .u-text-8 {
+    margin-top: -37px;
     margin-right: 225px;
     margin-left: auto;
   }
@@ -682,13 +673,11 @@
 
   .u-section-1 .u-group-1 {
     margin-top: 17px;
-    margin-right: 84px;
+    margin-right: 70px;
   }
 
   .u-section-1 .u-text-3 {
     width: 61px;
-    margin-left: auto;
-    margin-right: auto;
   }
 
   .u-section-1 .u-text-4 {
@@ -718,6 +707,11 @@
     margin-right: auto;
   }
 
+  .u-section-1 .u-group-2 {
+    margin-top: 19px;
+    margin-right: 70px;
+  }
+
   .u-section-1 .u-text-7 {
     width: 61px;
     margin-left: auto;
@@ -729,7 +723,7 @@
     margin-left: 86px;
   }
 } .u-section-2 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("/images/317024594-02.jpeg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("/static/images/stay_sharp/317024594-02.jpeg");
 }
 
 .u-section-2 .u-sheet-1 {
