Add Celery crontab - 14.10.22

--- a/templates/Calculation.html
+++ b/templates/Calculation.html
@@ -194,11 +194,10 @@
                             <div class="u-align-center u-container-style u-group u-palette-3-light-3 u-radius-10 u-shape-round u-group-2"
                                  data-animation-name="" data-animation-duration="0" data-animation-delay="0"
                                  data-animation-direction="">
-                                <div class="u-container-layout u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-valign-middle-xxl u-container-layout-4">
+                                <div class="u-container-layout u-valign-middle u-container-layout-4">
                                     <h3 class="u-custom-font u-font-roboto u-text u-text-black u-text-7"
                                         data-animation-name="counter" data-animation-event="scroll"
-                                        data-animation-duration="3000">{{ FVB_H|floatformat:1 }}<br>
-                                    </h3>
+                                        data-animation-duration="3000">{{ FVB_H|floatformat:1 }}</h3>
                                 </div>
                             </div>
                             <h3 class="u-align-left u-custom-font u-font-source-sans-pro u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xs u-text-palette-3-light-2 u-text-8">
