--- a/staticfiles/css/stay_sharp/Calculation.css
+++ b/staticfiles/css/stay_sharp/Calculation.css
@@ -1,7 +1,6 @@
  .u-section-1 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("/static/images/stay_sharp/317024594-02.jpeg");
   min-height: 783px;
-  background-position: 50% 50%;
 }
 
 .u-section-1 .u-layout-wrap-1 {
@@ -309,17 +308,19 @@
 .u-section-1 .u-text-7 {
   font-size: 1.5rem;
   font-weight: 400;
-  margin: 0 20px;
+  width: 81px;
+  margin: 0 auto;
 }
 
 .u-section-1 .u-text-8 {
   font-size: 1.5rem;
   font-weight: 400;
-  margin: -37px 262px 0 152px;
+  margin: -37px 262px 9px 152px;
 }
 
 @media (max-width: 1399px) {
    .u-section-1 {
+    background-position: 50% 50%;
     min-height: 773px;
   }
 
@@ -395,9 +396,7 @@
   }
 
   .u-section-1 .u-text-7 {
-    width: 67px;
-    margin-left: auto;
-    margin-right: auto;
+    width: 73px;
   }
 
   .u-section-1 .u-text-8 {
@@ -480,11 +479,6 @@
     margin-top: 0;
   }
 
-  .u-section-1 .u-group-2 {
-    margin-top: 19px;
-    margin-right: 121px;
-  }
-
   .u-section-1 .u-text-8 {
     margin-right: auto;
     margin-left: 113px;
@@ -531,15 +525,8 @@
     margin-top: 18px;
   }
 
-  .u-section-1 .u-group-2 {
-    margin-top: 16px;
-    margin-right: 70px;
-  }
-
   .u-section-1 .u-text-7 {
-    width: auto;
-    margin-left: 7px;
-    margin-right: 7px;
+    width: 81px;
   }
 
   .u-section-1 .u-text-8 {
@@ -550,7 +537,6 @@
 
 @media (max-width: 767px) {
    .u-section-1 {
-    background-position: 50% 50%;
     min-height: 825px;
   }
 
@@ -622,11 +608,6 @@
     margin-top: -259px;
     margin-right: 102px;
     margin-left: 432px;
-  }
-
-  .u-section-1 .u-group-2 {
-    margin-top: 20px;
-    margin-right: 93px;
   }
 
   .u-section-1 .u-text-8 {
@@ -708,15 +689,8 @@
     margin-right: auto;
   }
 
-  .u-section-1 .u-group-2 {
-    margin-top: 19px;
-    margin-right: 70px;
-  }
-
   .u-section-1 .u-text-7 {
     width: 61px;
-    margin-left: auto;
-    margin-right: auto;
   }
 
   .u-section-1 .u-text-8 {
@@ -725,7 +699,6 @@
   }
 } .u-section-2 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("/static/images/stay_sharp/317024594-02.jpeg");
-  background-position: 50% 50%;
 }
 
 .u-section-2 .u-sheet-1 {
@@ -767,6 +740,10 @@
 }
 
 @media (max-width: 1399px) {
+   .u-section-2 {
+    background-position: 50% 50%;
+  }
+
   .u-section-2 .u-layout-wrap-1 {
     width: 1083px;
     margin-bottom: 33px;
@@ -862,10 +839,6 @@
 }
 
 @media (max-width: 767px) {
-   .u-section-2 {
-    background-position: 50% 50%;
-  }
-
   .u-section-2 .u-sheet-1 {
     min-height: 1182px;
   }
