--- a/info_ss/templates/email_info/email_report_week.html
+++ b/info_ss/templates/email_info/email_report_week.html
@@ -2,7 +2,7 @@
 I hope it is good morning.
    now {{ today }}
 
-For last week
+For last day
 
     {{ visitors_num }} visitors including {{ most_visitor }} ({{ visits_of_most_visitor }})
     choose the angle visits - {{ choose_visits }}
